# waw-testcase-backend

./: .gitignore  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.docx  architecture_docs.html  architecture_docs_updated.md
waw-contracts/: Makefile  README.md  pyproject.toml  setup.cfg
waw-contracts/proto/: identity.proto  model.proto
waw-identity/: .env.example  README.md  delete_profile.py  edit_profile.py  identity.db  requirements.txt
waw-identity/scripts/: delete_profile.py  edit_profile.py  get_profile.py
waw-identity/src/: identity_srv.py
waw-identity/tests/: test_identity.py
waw-identity/waw-identity/: identity.db
waw-sync/: README.md  requirements.txt
waw-sync/backend_mock/: app.py
waw-sync/src/: sync_loop.py
waw-sync/tests/: test_app.py  test_contract_imports.py  test_sync_loop.py
