[metadata]
name = waw-contracts
version = 0.0.1
description = gRPC proto stubs for Wellness-at-Work services
author = Your Name
author_email = you@example.com
license = MIT

[options]
packages = find:
package_dir =
    = dist
install_requires =
    grpcio
    grpcio-tools

[options.packages.find]
where = dist
